# simd-research

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json.example  LICENSE  README.md  main.cpp  meson.build  vcpkg.json
benchmark/: benchmark_results.json  benchmark_results_avx512.json  benchmark_results_avx512_new_struct.json
exam/: exam.cpp  exam.h
exec_timer/: exec_timer.cpp  exec_timer.h
include/: exam.h  exec_timer.h  scorers.hpp
scorers/: scorers.hpp
src/: benchmark.cpp  exam.cpp  exec_timer.cpp  main.cpp  test.cpp
subprojects/pcg-cpp-0.98.1/: .meson-subproject-wrap-hash.txt
utils/: benchmark_graphs.py
